--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,14 +12,25 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #1976D2;
-$secondary : #26A69A;
-$accent    : #9C27B0;
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap");
+$typography-font-family: "Manrope", sans-serif !default;
 
-$dark      : #1D1D1D;
-$dark-page : #121212;
+$primary: #1976d2;
+$secondary: #26a69a;
+$accent: #9c27b0;
 
-$positive  : #21BA45;
-$negative  : #C10015;
-$info      : #31CCEC;
-$warning   : #F2C037;
+$dark: #1d1d1d;
+$dark-page: #121212;
+
+$positive: #21ba45;
+$negative: #c10015;
+$info: #31ccec;
+$warning: #f2c037;
+
+$light: #ededed;
+.bg-light-grey {
+  background-color: $light !important;
+}
+.text-light {
+  color: $light !important;
+}
