feature: update session names and enhance selection logic for overlapping sessions

--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -15,7 +15,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap");
 $typography-font-family: "Manrope", sans-serif !default;
 
-$primary: #1976d2;
+$primary: #1f3c4a;
 $secondary: #26a69a;
 $accent: #9c27b0;
 
