--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -23,6 +23,9 @@
   font-weight: 800;
 }
 
+.action-button .q-btn__content span {
+  letter-spacing: 2px;
+}
 .q-btn {
   padding: 4px;
   .q-focus-helper {
@@ -52,6 +55,16 @@
   border: 2px solid $light !important;
   border-radius: 0 !important;
   box-shadow: none !important;
+}
+
+.q-field__bottom {
+  padding: 2px 12px;
+}
+
+.q-card {
+  box-shadow: none !important;
+  border-radius: 0 !important;
+  border: 2px solid $light !important;
 }
 
 .dp__input,
