--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,6 +12,7 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
+@import url("https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons");
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap");
 $typography-font-family: "Manrope", sans-serif !default;
 
